[gd_scene load_steps=5 format=3 uid="uid://b1gwqnet1miyk"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_vfjfv"]
[ext_resource type="PackedScene" uid="uid://pv4nj6nfcre3" path="res://assets/models/player_arms.tscn" id="2_ufa8s"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uxa0e"]
radius = 0.28
height = 0.65

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_73tdm"]
radius = 0.3
height = 1.15

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_vfjfv")

[node name="PlayerCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
cull_mask = 1048573
current = true
fov = 90.0

[node name="Arms" parent="PlayerCamera" instance=ExtResource("2_ufa8s")]
transform = Transform3D(-0.028, -2.15937e-12, -4.20223e-09, -4.64369e-10, 0.0278301, 0.00307985, 4.17649e-09, 0.00307985, -0.0278301, 0, -0.42996, -0.106938)

[node name="Head" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Collider" type="CollisionShape3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.17, 0)
shape = SubResource("CapsuleShape3D_uxa0e")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CapsuleShape3D_73tdm")

[node name="BodyContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BodyViewport" type="SubViewport" parent="BodyContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="BodyCamera" type="Camera3D" parent="BodyContainer/BodyViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -29.0496, 0)
cull_mask = 2
fov = 90.0

[node name="Pivot" type="Node3D" parent="."]

[node name="CurbRay1" type="RayCast3D" parent="Pivot"]
transform = Transform3D(1.15, 0, 0, 0, 1.15, 0, 0, 0, 1.15, 0, 1.15, -0.34)
enabled = false
hit_back_faces = false

[node name="CurbRay2" type="RayCast3D" parent="Pivot"]
transform = Transform3D(1.15, 0, 0, 0, 1.15, 0, 0, 0, 1.15, -0.24, 1.15, -0.3)
enabled = false
hit_back_faces = false

[node name="CurbRay3" type="RayCast3D" parent="Pivot"]
transform = Transform3D(1.15, 0, 0, 0, 1.15, 0, 0, 0, 1.15, 0.24, 1.15, -0.3)
enabled = false
hit_back_faces = false

[node name="CurbRay4" type="RayCast3D" parent="Pivot"]
transform = Transform3D(1.15, 0, 0, 0, 1.15, 0, 0, 0, 1.15, 0.15, 1.15, -0.42)
enabled = false
hit_back_faces = false

[node name="CurbRay5" type="RayCast3D" parent="Pivot"]
transform = Transform3D(1.15, 0, 0, 0, 1.15, 0, 0, 0, 1.15, -0.15, 1.15, -0.42)
enabled = false
hit_back_faces = false

[node name="GroundRay" type="RayCast3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0.01, 0)
enabled = false
